k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-angular-main
  namespace: default
  labels:
    app.kubernetes.io/name: django-angular-main
    app.kubernetes.io/managed-by: devopsgen
spec:
  selector:
    app.kubernetes.io/name: django-angular-main
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
